@@ -242,6 +242,6 @@ Blockly.Arduino.grove_temporature_sensor = function() {
 	  temperature=1/(log(resistance/10000)/B+1/298.15)-273.15;
 	*/
   //Blockly.Arduino.definitions_['define_'+dropdown_pin] = 'int a;\n';
-  var code = 'int('+'1/(log((float)(1023-a)*10000/analogRead('+dropdown_pin+'))/10000)/3975+1/298.15)-273.15'+')';
+  var code = 'round('+'(1/(log((float)(1023-analogRead('+dropdown_pin+'))*10000/analogRead('+dropdown_pin+'))/10000)/3975+1/298.15)-273.15'+')';
   return [code, Blockly.Arduino.ORDER_ATOMIC];
 };
