@@ -41,11 +41,11 @@
       var newLanguage = {}
       var keepers = ['inout_highlow',
           'inout_digital_write', 'inout_digital_read', 'inout_analog_write', 'inout_analog_read',
-		  'inout_buildin_led',
+		  'serial_print', 'inout_buildin_led',
           'base_delay', 'base_map',
 		  'servo_move', 'servo_read_degrees',
           'grove_led', 'grove_button', 'grove_potentiometer', 'grove_tilt_switch', 'grove_piezo_buzzer',
-          'grove_relay', //'grove_temporature_sensor',
+          'grove_relay', 'grove_temporature_sensor',
           'controls_if', 'controls_if_if', 'controls_if_elseif', 'controls_if_else', 
           'controls_for',//'controls_whileUntil', 'controls_flow_statements',
           'math_number','math_arithmetic',//'math_modulo',
